# log-redactor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  build.sh  mkdocs.yml  pyproject.toml  redactor.py  requirements.txt  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md  modules.md
log_redactor/: IPv4Generator.py  IPv6Generator.py  PhoneNumberGenerator.py  redactor.py  redactor.rs
samples/: ignore.csv  ignore.json  ignore.toml  redacted-mapping.txt  sample.tar  secret.csv  secrets.csv  secrets.json  secrets.toml
scripts/: build.sh  phone_test.sh  zig-build.sh
src/: ipv4_generator.rs  lib.rs  main.rs  phone_number_generator.rs  redaction_utils.rs  version.rs
tests/: test_api.rs  test_email.rs  test_foo.py  test_hostname.rs  test_phone.rs  test_redactor.py  test_redactor.rs  test_units.rs  test_url.rs  test_wildcard_pattern.rs
