[package]
name = "log_redactor"
version = "0.1.0"
authors = ["HP <null@hiranpatel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
log = "0.4.16"
clap = "4.5.23"
regex = "1.5.4"
serde_json = "1.0.64"
serde = "1.0.130"
serde_derive = "1.0.130"
zip = "2.2.2"
url = "2.2.2"
rand = "0.8"
lopdf = { version = "0.31", features = ["nom_parser"] }
ipnet = "2.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.22"
