[package]
name = "log_redactor"
version = "1.0.0"
authors = ["HP <null@hiranpatel.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitcl"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14.0"

[dependencies]
env_logger = "0.11.5"
log = "0.4.16"
clap = { version = "4.5.23", default-features = false, features = ["std"] }
regex = "1.5.4"
serde_json = "1.0.64"
serde = "1.0.130"
serde_derive = "1.0.130"
zip = "2.2.2"
url = "2.2.2"
rand = "0.8"
lopdf = { version = "0.34", features = ["nom_parser"] }
ipnet = "2.7.0"
lazy_static = "1.5.0"
email_address = "0.2.9"
flate2 = "1.0.35"
tar = "0.4.43"
infer = { version = "0.16.0", default-features = false }
bzip2 = { version = "0.5.0", default-features = false, features = [
  "libbz2-rs-sys",
] }
time = { version = "0.3.37", features = ["formatting", "parsing", "macros"] }
globset = "0.4.15"

[lib]
path = "src/lib.rs"

[profile.release]
strip = true # Automatically strip symbols from the binary.

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.29.0"
